src/objects/Eventbrite_Opp_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Settings for Groundwire&apos;s integration with Eventbrite, which creates opportunities for event registrations uploaded via the Eventbrite Connector.</description>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <defaultValue>&quot;Attendee&quot;</defaultValue>
        <inlineHelpText>Name of the opportunity contact role to create for each ticketed contact, such as Participant or Attendee.</inlineHelpText>
        <label>Contact Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Opportunities__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check this box to create an opportunity whenever an Eventbrite lead with ticket purchase data is converted to a contact.</inlineHelpText>
        <label>Create Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type__c</fullName>
        <defaultValue>&quot;Event Registration&quot;</defaultValue>
        <inlineHelpText>Name of the record type for new ticket purchase opportunities.</inlineHelpText>
        <label>Opportunity Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Name__c</fullName>
        <defaultValue>&quot;Closed Won&quot;</defaultValue>
        <inlineHelpText>Name of the stage for new event registration opportunities.</inlineHelpText>
        <label>Stage Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Eventbrite Opportunity Settings</label>
</CustomObject>